--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -8,10 +8,12 @@ ja:
           id: ID
           name: 名前
           email: メールアドレス
-          department: 所属
+          affiliation: 所属
           password: パスワード
           basic_start: 基本勤務開始時間
           basic_finish: 基本勤務終了時間
+          uid: カードID
+          employee_number: 社員番号
           work_time: 指定勤務時間
           password_confirmation: パスワード再入力
           created_at: 作成日
