--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -11,11 +11,11 @@ ja:
           email: メールアドレス
           affiliation: 所属
           password: パスワード
-          basic_start: 基本勤務開始時間
-          basic_finish: 基本勤務終了時間
+          designated_work_start_time: 指定勤務開始時間
+          designated_work_end_time: 指定勤務終了時間
           uid: カードID
           employee_number: 社員番号
-          work_time: 指定勤務時間
+          basic_work_time: 基本時間 
           password_confirmation: パスワード再入力
           created_at: 作成日
           updated_at: 更新日
